--- a/lighthouse-core/lib/i18n/en-US.json
+++ b/lighthouse-core/lib/i18n/en-US.json
@@ -932,8 +932,8 @@
     "description": "Description of a Lighthouse audit that tells the user whether JSON-LD snippets on the page are invalid. This is displayed after a user expands the section to see more. No character length limits."
   },
   "lighthouse-core/audits/seo/structured-data-automatic.js | displayValue": {
-    "message": "{validSnippetProportion, number, percent} valid snippets",
-    "description": "Explanatory message stating what percentage of JSON-LD structured data snippets are invalid"
+    "message": "{invalidSnippetCount, plural,\n    =1 {# invalid snippet}\n    other {# invalid snippets}\n    }",
+    "description": "Explanatory message stating how many JSON-LD structured data snippets are invalid"
   },
   "lighthouse-core/audits/seo/structured-data-automatic.js | failureTitle": {
     "message": "JSON-LD structured data syntax is invalid",
