--- a/lighthouse-core/lib/i18n/en-US.json
+++ b/lighthouse-core/lib/i18n/en-US.json
@@ -751,6 +751,102 @@
     "message": "Avoid multiple page redirects",
     "description": "Imperative title of a Lighthouse audit that tells the user to eliminate the redirects taken through multiple URLs to load the page. This is shown in a list of audits that Lighthouse generates."
   },
+  "lighthouse-core/audits/resource-budget.js | description": {
+    "message": "To set budgets for the quantity and size of page resources, add a budget.json file.",
+    "description": "Description of a Lighthouse audit that tells the user that they can setup a budgets for the quantity and size of page resources. No character length limits."
+  },
+  "lighthouse-core/audits/resource-budget.js | documentResourceType": {
+    "message": "Document",
+    "description": "Label for the 'Document' resource type."
+  },
+  "lighthouse-core/audits/resource-budget.js | fontResourceType": {
+    "message": "Font",
+    "description": "Label for the 'font' resource type."
+  },
+  "lighthouse-core/audits/resource-budget.js | imageResourceType": {
+    "message": "Image",
+    "description": "Label for the 'image' resource type."
+  },
+  "lighthouse-core/audits/resource-budget.js | mediaResourceType": {
+    "message": "Media",
+    "description": "Label for the 'media' resource type."
+  },
+  "lighthouse-core/audits/resource-budget.js | otherResourceType": {
+    "message": "Other",
+    "description": "Label for the 'other' resource type."
+  },
+  "lighthouse-core/audits/resource-budget.js | requestCount": {
+    "message": "{count, plural,\n    =1 {1 request}\n    other {# requests}\n   }",
+    "description": "[ICU Syntax] Label identifying the number of requests"
+  },
+  "lighthouse-core/audits/resource-budget.js | scriptResourceType": {
+    "message": "Script",
+    "description": "Label for the 'script' resource type."
+  },
+  "lighthouse-core/audits/resource-budget.js | stylesheetResourceType": {
+    "message": "Stylesheet",
+    "description": "Label for the 'stylesheet' resource type."
+  },
+  "lighthouse-core/audits/resource-budget.js | thirdPartyResourceType": {
+    "message": "Third-party",
+    "description": "Label for the 'third-party' resource type."
+  },
+  "lighthouse-core/audits/resource-budget.js | title": {
+    "message": "Keep request counts and file sizes small",
+    "description": "Imperative title of a Lighthouse audit that tells the user to minimize the size and quantity of resources used to load the page."
+  },
+  "lighthouse-core/audits/resource-budget.js | totalResourceType": {
+    "message": "Total",
+    "description": ""
+  },
+  "lighthouse-core/audits/resource-summary.js | description": {
+    "message": "To set budgets for the quantity and size of page resources, add a budget.json file.",
+    "description": "Description of a Lighthouse audit that tells the user that they can setup a budgets for the quantity and size of page resources. No character length limits."
+  },
+  "lighthouse-core/audits/resource-summary.js | displayValue": {
+    "message": "{requestCount, plural, =1 {1 request} other {# requests}} • { byteCount, number, bytes } KB",
+    "description": "[ICU Syntax] Label for an audit identifying the number of requests and kilobytes used to load the page."
+  },
+  "lighthouse-core/audits/resource-summary.js | documentResourceType": {
+    "message": "Document",
+    "description": "Label for the 'Document' resource type."
+  },
+  "lighthouse-core/audits/resource-summary.js | fontResourceType": {
+    "message": "Font",
+    "description": "Label for the 'font' resource type."
+  },
+  "lighthouse-core/audits/resource-summary.js | imageResourceType": {
+    "message": "Image",
+    "description": "Label for the 'image' resource type."
+  },
+  "lighthouse-core/audits/resource-summary.js | mediaResourceType": {
+    "message": "Media",
+    "description": "Label for the 'media' resource type."
+  },
+  "lighthouse-core/audits/resource-summary.js | otherResourceType": {
+    "message": "Other",
+    "description": "Label for the 'other' resource type."
+  },
+  "lighthouse-core/audits/resource-summary.js | scriptResourceType": {
+    "message": "Script",
+    "description": "Label for the 'script' resource type."
+  },
+  "lighthouse-core/audits/resource-summary.js | stylesheetResourceType": {
+    "message": "Stylesheet",
+    "description": "Label for the 'stylesheet' resource type."
+  },
+  "lighthouse-core/audits/resource-summary.js | thirdPartyResourceType": {
+    "message": "Third-party",
+    "description": "Label for the 'third-party' resource type."
+  },
+  "lighthouse-core/audits/resource-summary.js | title": {
+    "message": "Keep request counts and file sizes small",
+    "description": "Imperative title of a Lighthouse audit that tells the user to minimize the size and quantity of resources used to load the page."
+  },
+  "lighthouse-core/audits/resource-summary.js | totalResourceType": {
+    "message": "Total",
+    "description": "Label for the combination of all resources on the page."
+  },
   "lighthouse-core/audits/seo/canonical.js | description": {
     "message": "Canonical links suggest which URL to show in search results. [Learn more](https://developers.google.com/web/tools/lighthouse/audits/canonical).",
     "description": "Description of a Lighthouse audit that tells the user *why* they need to have a valid rel=canonical link. This is displayed after a user expands the section to see more. No character length limits. 'Learn More' becomes link text to additional documentation."
@@ -1102,6 +1198,14 @@
   "lighthouse-core/config/default-config.js | a11yTablesListsVideoGroupTitle": {
     "message": "Tables and lists",
     "description": "Title of the navigation section within the Accessibility category. Within this section are audits with descriptive titles that highlight opportunities to improve the experience of reading tabular or list data using assistive technology."
+  },
+  "lighthouse-core/config/default-config.js | budgetsGroupDescription": {
+    "message": "Performance budgets set standards for the performance of your site.",
+    "description": "Description of the Budgets section of the Performance category. Within this section the budget results are displayed."
+  },
+  "lighthouse-core/config/default-config.js | budgetsGroupTitle": {
+    "message": "Budgets",
+    "description": "Title of the Budgets section of the Performance Category. 'Budgets' refers to a budget (like a financial budget), but applied to the amount of resources on a page, rather than money."
   },
   "lighthouse-core/config/default-config.js | diagnosticsGroupDescription": {
     "message": "More information about the performance of your application.",
