--- a/lighthouse-core/lib/i18n/locales/en-XL.json
+++ b/lighthouse-core/lib/i18n/locales/en-XL.json
@@ -893,6 +893,18 @@
   "lighthouse-core/audits/seo/is-crawlable.js | title": {
     "message": "P̂áĝé îśn̂’t́ b̂ĺôćk̂éd̂ f́r̂óm̂ ín̂d́êx́îńĝ"
   },
+  "lighthouse-core/audits/seo/json-ld.js | description": {
+    "message": "Ŝt́r̂úĉt́ûŕêd́ d̂át̂á ĉón̂t́âín̂ś r̂íĉh́ m̂ét̂ád̂át̂á âb́ôút̂ á ŵéb̂ ṕâǵê. T́ĥé d̂át̂á îś ûśêd́ îń ŝéâŕĉh́ r̂éŝúl̂t́ŝ án̂d́ ŝóĉíâĺ ŝh́âŕîńĝ. Ín̂v́âĺîd́ m̂ét̂ád̂át̂á ŵíl̂ĺ âf́f̂éĉt́ ĥóŵ t́ĥé p̂áĝé âṕp̂éâŕŝ ín̂ t́ĥéŝé ĉón̂t́êx́t̂ś. T̂h́îś âúd̂ít̂ ćûŕr̂én̂t́l̂ý v̂ál̂íd̂át̂éŝ á ŝúb̂śêt́ ôf́ ĴŚÔŃ-L̂D́ r̂úl̂éŝ. Śêé âĺŝó t̂h́ê [Śt̂ŕûćt̂úr̂éd̂ D́ât́â T́êśt̂ín̂ǵ T̂óôĺ](https://search.google.com/structured-data/testing-tool/) t̂ó v̂ál̂íd̂át̂é ôt́ĥér̂ t́ŷṕêś ôf́ ŝt́r̂úĉt́ûŕêd́ d̂át̂á."
+  },
+  "lighthouse-core/audits/seo/json-ld.js | displayValue": {
+    "message": "{invalidSnippetCount, plural,\n    =1 {# îńv̂ál̂íd̂ śn̂íp̂ṕêt́}\n    other {# îńv̂ál̂íd̂ śn̂íp̂ṕêt́ŝ}\n    }"
+  },
+  "lighthouse-core/audits/seo/json-ld.js | failureTitle": {
+    "message": "ĴŚÔŃ-L̂D́ ŝt́r̂úĉt́ûŕêd́ d̂át̂á ŝýn̂t́âx́ îś îńv̂ál̂íd̂"
+  },
+  "lighthouse-core/audits/seo/json-ld.js | title": {
+    "message": "ĴŚÔŃ-L̂D́ ŝt́r̂úĉt́ûŕêd́ d̂át̂á ŝýn̂t́âx́ îś v̂ál̂íd̂"
+  },
   "lighthouse-core/audits/seo/link-text.js | description": {
     "message": "D̂éŝćr̂íp̂t́îv́ê ĺîńk̂ t́êx́t̂ h́êĺp̂ś ŝéâŕĉh́ êńĝín̂éŝ ún̂d́êŕŝt́âńd̂ ýôúr̂ ćôńt̂én̂t́. [L̂éâŕn̂ ḿôŕê](https://developers.google.com/web/tools/lighthouse/audits/descriptive-link-text)."
   },
@@ -906,7 +918,7 @@
     "message": "L̂ín̂ḱŝ h́âv́ê d́êśĉŕîṕt̂ív̂é t̂éx̂t́"
   },
   "lighthouse-core/audits/seo/manual/structured-data.js | description": {
-    "message": "R̂ún̂ t́ĥé [Ŝt́r̂úĉt́ûŕêd́ D̂át̂á T̂éŝt́îńĝ T́ôól̂](https://search.google.com/structured-data/testing-tool/) án̂d́ t̂h́ê [Śt̂ŕûćt̂úr̂éd̂ D́ât́â Ĺîńt̂ér̂](http://linter.structured-data.org/) t́ô v́âĺîd́ât́ê śt̂ŕûćt̂úr̂éd̂ d́ât́â. [Ĺêár̂ń m̂ór̂é](https://developers.google.com/search/docs/guides/mark-up-content)."
+    "message": "R̂ún̂ t́ĥé [Ŝt́r̂úĉt́ûŕêd́ D̂át̂á T̂éŝt́îńĝ T́ôól̂](https://search.google.com/structured-data/testing-tool/) t́ô v́âĺîd́ât́ê śt̂ŕûćt̂úr̂éd̂ d́ât́â. [Ĺêár̂ń m̂ór̂é](https://developers.google.com/search/docs/guides/mark-up-content)."
   },
   "lighthouse-core/audits/seo/manual/structured-data.js | title": {
     "message": "Ŝt́r̂úĉt́ûŕêd́ d̂át̂á îś v̂ál̂íd̂"
